Pavel/ tree table collapse fix (#1822)
* close dialog and lightbox on history back

* bump version

* updated to use WindowRef

* ft

* ft

* upd

* ft

* fix build

* misc

* misc

* rte word paste fix

* tree table fix

* ss

* bump version

* ss

--- a/projects/ui-framework/bob-table/src/table/table/styles/tree-table.component.scss
+++ b/projects/ui-framework/bob-table/src/table/table/styles/tree-table.component.scss
@@ -43,24 +43,20 @@ $toolpanel-indent-size: times8(4);
         display: none;
       }
     }
-    .ag-center-cols-clipper {
-      .ag-row[role='row'] > :first-child {
-        pointer-events: none;
-      }
-      .ag-row:not(.ag-row-level-0) {
-        > :first-child {
-          .ag-cell-wrapper {
-            @include ag-icon('arrow-dir-right');
-            overflow: visible;
-            position: relative;
-            &:before {
-              position: absolute;
-              color: $grey-600;
-              transform: translate(calc(-100% - 2px), -3px);
-              height: auto;
-            }
-          }
-        }
+
+    [class*='ag-row-group-indent-'] {
+      pointer-events: none;
+    }
+
+    [class*='ag-row-group-indent-']:not(.ag-row-group-indent-0) {
+      @include ag-icon('arrow-dir-right');
+      overflow: visible;
+      position: relative;
+      &:before {
+        position: absolute;
+        color: $grey-600;
+        transform: translate(calc(-100% - 2px), -3px);
+        height: auto;
       }
     }
   }
